# GameEngine

./: .gitignore  CMakeLists.txt  EditorApp  README.md  imgui.ini  scene.json
Core/: AGameShape.hpp  Cube.cpp  Cube.hpp  GameShape.cpp  GameShape.hpp  Gizmo.cpp  Gizmo.hpp  IGameShape.hpp  JsonHandler.cpp  JsonHandler.hpp  Scene.cpp  Scene.hpp
Core/API/: CameraAPI.cpp  CameraAPI.hpp  EntityAPI.cpp  EntityAPI.hpp  InputAPI.cpp  InputAPI.hpp  RenderAPI.cpp  RenderAPI.hpp  TransformAPI.cpp  TransformAPI.hpp
Core/Camera/: Camera3D.cpp  Camera3D.hpp
Core/Ecs/: Component.hpp  ComponentManager.hpp  ECSManager.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  System.hpp  SystemManager.hpp  TransformHelper.hpp
Core/Ecs/components/: CameraComponent.hpp  EditorOnlyComponent.hpp  GizmoComponent.hpp  ModelComponent.hpp  NameComponent.hpp  RenderComponent.hpp  ScriptComponent.hpp  SelectionComponent.hpp  ShapeComponent.hpp  TransformComponent.hpp
Core/Ecs/systems/: CameraEditorSystem.cpp  CameraEditorSystem.hpp  CameraSystem.cpp  CameraSystem.hpp  GizmoSystem.cpp  GizmoSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  ScriptSystem.cpp  ScriptSystem.hpp  SelectionSystem.cpp  SelectionSystem.hpp
Core/Serialization/: JsonHandler.hpp  Load.cpp  Load.hpp  Save.cpp  Save.hpp
Editor/: Application.cpp  Application.hpp  Gui.cpp  Gui.hpp  InputManager.cpp  InputManager.hpp  Renderer.cpp  Renderer.hpp  ViewportManager.cpp  ViewportManager.hpp  Window.cpp  Window.hpp  main.cpp
Editor/3D/: Shape.cpp  Shape.hpp
Editor/Camera/: Camera3D.cpp  Camera3D.hpp  CameraEditor.cpp  CameraEditor.hpp
Editor/Gui/: FinderPanel.cpp  FinderPanel.hpp  Gui.cpp  Gui.hpp  Icons.h  MainHierarchyPanel.cpp  MainHierarchyPanel.hpp  MainMenuBar.cpp  MainMenuBar.hpp  MainPropertiesPanel.cpp  MainPropertiesPanel.hpp
Runtime/: PlayerApplication.cpp  PlayerApplication.hpp  main.cpp
scripts/: camera.lua  cube.lua  move.lua
